--- a/Aplikacija/Studentska služba/Studentska služba/Strings/de-DE/PromenaLozinke.resw
+++ b/Aplikacija/Studentska služba/Studentska služba/Strings/de-DE/PromenaLozinke.resw
@@ -127,7 +127,7 @@
     <value>Ponovite novu lozinku</value>
   </data>
   <data name="Otkazi.Content" xml:space="preserve">
-    <value>Otkazi</value>
+    <value>Otkaži</value>
   </data>
   <data name="PromeniLozinku.Content" xml:space="preserve">
     <value>Promeni lozinku</value>
