--- a/Aplikacija/Studentska služba/Studentska služba/Strings/de-DE/NavigationViewItems.resw
+++ b/Aplikacija/Studentska služba/Studentska služba/Strings/de-DE/NavigationViewItems.resw
@@ -120,25 +120,43 @@
   <data name="DokumentacijaZaProfesore.Content" xml:space="preserve">
     <value>Dokumentacija za profesore</value>
   </data>
+  <data name="DokumentacijaZaProfesore.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Štampaj dokumenta za profesore</value>
+  </data>
   <data name="Kod.Content" xml:space="preserve">
     <value>Kod</value>
+  </data>
+  <data name="Kod.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Otvori Github stranicu ovog projekta u web browser-u</value>
   </data>
   <data name="Podaci.Content" xml:space="preserve">
     <value>Podaci</value>
   </data>
+  <data name="Podaci.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Svi podaci vezani za univerzitet</value>
+  </data>
   <data name="Podesavanja.Content" xml:space="preserve">
-    <value>Podesavanja</value>
+    <value>Podešavanja</value>
   </data>
   <data name="Pomoc.Content" xml:space="preserve">
-    <value>Pomoc</value>
+    <value>Pomoć</value>
+  </data>
+  <data name="Pomoc.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Otvori korisničko uputstvo aplikacije</value>
   </data>
   <data name="PotvrdeUverenja.Content" xml:space="preserve">
     <value>Potvrde i uverenja</value>
+  </data>
+  <data name="PotvrdeUverenja.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Štampaj dokumenta za studente</value>
   </data>
   <data name="SignOut.Content" xml:space="preserve">
     <value>Odjavi se</value>
   </data>
   <data name="Statistika.Content" xml:space="preserve">
     <value>Statistika</value>
+  </data>
+  <data name="Statistika.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Statistički podaci o univerzitetu</value>
   </data>
 </root>
