--- a/Aplikacija/Studentska služba/Studentska služba/Strings/en-US/NavigationViewItems.resw
+++ b/Aplikacija/Studentska služba/Studentska služba/Strings/en-US/NavigationViewItems.resw
@@ -120,11 +120,20 @@
   <data name="DokumentacijaZaProfesore.Content" xml:space="preserve">
     <value>Documentation for professors</value>
   </data>
+  <data name="DokumentacijaZaProfesore.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Print documents for the professors</value>
+  </data>
   <data name="Kod.Content" xml:space="preserve">
     <value>Code</value>
   </data>
+  <data name="Kod.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Open the Github page of this project in the browser</value>
+  </data>
   <data name="Podaci.Content" xml:space="preserve">
     <value>Data</value>
+  </data>
+  <data name="Podaci.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>All data about the university</value>
   </data>
   <data name="Podesavanja.Content" xml:space="preserve">
     <value>Settings</value>
@@ -132,13 +141,22 @@
   <data name="Pomoc.Content" xml:space="preserve">
     <value>Help</value>
   </data>
+  <data name="Pomoc.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Open the manual of the application</value>
+  </data>
   <data name="PotvrdeUverenja.Content" xml:space="preserve">
     <value>Documents for students</value>
+  </data>
+  <data name="PotvrdeUverenja.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Print documents for the students</value>
   </data>
   <data name="SignOut.Content" xml:space="preserve">
     <value>Sign out</value>
   </data>
   <data name="Statistika.Content" xml:space="preserve">
     <value>Statistics</value>
+  </data>
+  <data name="Statistika.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Show statistics about the university</value>
   </data>
 </root>
